--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 
-
 	<title>Resume</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,7 +13,6 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="https://cdn-icons-png.flaticon.com/128/5861/5861285.png">
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
-
 
 </head>
 
@@ -43,11 +41,9 @@
 		<div class="container">
 			<div class="row intro-text align-items-center justify-content-center">
 				<div class="col-md-10 text-center pt-5">
-
 					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Simone Sechi</strong>
 					</h1>
 					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Resume</strong>
-
 				</div>
 			</div>
 		</div>
@@ -249,7 +245,7 @@
 				</div>
 			</div>
 		</div>
-	</section> <!-- .section -->
+	</section>
 
 	<section class="site-section" id="section-about">
 		<div class="container">
@@ -372,8 +368,8 @@
 			</div>
 		</div>
 	</section>
-	<!--
-	<section class="site-section" id="section-blog">
+
+	<!-- <section class="site-section" id="section-blog">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 mb-5">
