migliorata UI e aggiunte pagine :lipstick:

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="#">
+								<a href="paleoscovery.html">
 									<img class="image img-fluid" src="images/Paleoscovery_1.png" alt="">
 								</a>
 							</div>
