migliorata UI e aggiunte pagine :lipstick:

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<a href="#">
-									<img class="image img-fluid" src="images/Flows_1.jpg" alt="">
+									<img class="image img-fluid" src="images/flows_1.jpg" alt="">
 								</a>
 							</div>
 							<!--<a href="images/Flows_1.jpg" class="img-pop-up">
@@ -92,13 +92,13 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<a href="paleoscovery.html">
-									<img class="image img-fluid" src="images/Paleoscovery_1.png" alt="">
+									<img class="image img-fluid" src="images/paleoscovery_1.png" alt="">
 								</a>
 							</div>
-							<a href="images/Paleoscovery_1.png" class="img-pop-up">
+							<a href="images/paleoscovery_1.png" class="img-pop-up">
 								<div class="middle">
 									<div class="text align-self-center d-flex"><img
-											src="images/Paleoscovery_preview.png" alt="">
+											src="images/paleoscovery_preview.png" alt="">
 									</div>
 								</div>
 							</a>
@@ -113,12 +113,12 @@
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
 								<a href="#">
-									<img class="image img-fluid" src="images/BeeDone_1.png" alt="">
+									<img class="image img-fluid" src="images/beedone_1.png" alt="">
 								</a>
 							</div>
-							<a href="images/BeeDone_1.png" class="img-pop-up">
+							<a href="images/beedone_1.png" class="img-pop-up">
 								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/BeeDone_preview.png"
+									<div class="text align-self-center d-flex"><img src="images/beedone_preview.png"
 											alt="">
 									</div>
 								</div>
@@ -133,12 +133,12 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div><a href="#">
-									<img class="image img-fluid" src="images/TOD_1.png" alt="">
+									<img class="image img-fluid" src="images/tod_1.png" alt="">
 								</a>
 							</div>
-							<a href="images/TOD_1.png" class="img-pop-up">
+							<a href="images/tod_1.png" class="img-pop-up">
 								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/TOD_preview.png" alt="">
+									<div class="text align-self-center d-flex"><img src="images/tod_preview.png" alt="">
 									</div>
 								</div>
 							</a>
