added pages :lipstick:

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
+					<li class="nav-item"><a class="nav-link active" onclick="showDropDown()"
+							style="cursor:pointer">Projects▼</a>
+						<div class="dropdown-content" hidden>
+							<a href="./paleoscovery.html" class="active">Paleoscovery</a>
+							<a href="./beedone.html">BeeDone</a>
+							<a href="./flows.html">Flows Music</a>
+							<a href="./tod.html">Truth Or Dare</a>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -501,6 +510,7 @@
 	<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 	<script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/main.js"></script>
 
 </body>
 
