--- a/beedone.html
+++ b/beedone.html
@@ -35,8 +35,8 @@
                             style="cursor:pointer">Projects
                             ▼</a>
                         <div class="dropdown-content" hidden>
-                            <a href="./paleoscovery.html" class="active">Paleoscovery</a>
-                            <a href="./beedone.html">BeeDone</a>
+                            <a href="./paleoscovery.html">Paleoscovery</a>
+                            <a href="./beedone.html" class="active">BeeDone</a>
                             <a href="./flows.html">Flows Music</a>
                             <a href="./tod.html">Truth Or Dare</a>
                         </div>
@@ -46,12 +46,12 @@
         </div>
     </nav>
 
-    <section class="site-hero" style="background-image: url(images/paleoscovery_1.png);" id="section-home"
+    <section class="site-hero" style="background-image: url(images/beedone_1.png);" id="section-home"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row intro-text align-items-center justify-content-center">
                 <div class="col-md-10 text-center pt-5">
-                    <h1 class="site-heading site-animate">This is<strong class="d-block"> Paleoscovery</strong>
+                    <h1 class="site-heading site-animate">This is<strong class="d-block"> BeeDone</strong>
                     </h1>
                 </div>
             </div>
