--- a/flows.html
+++ b/flows.html
@@ -26,7 +26,7 @@
             </button>
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#section-home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-resume">Resume</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
@@ -35,10 +35,10 @@
                             style="cursor:pointer">Projects
                             ▼</a>
                         <div class="dropdown-content" hidden>
-                            <a href="./paleoscovery.html" class="active">Paleoscovery</a>
-                            <a href="./beedone.html">BeeDone</a>
-                            <a href="./flows.html">Flows Music</a>
-                            <a href="./tod.html">Truth Or Dare</a>
+                            <a href="paleoscovery.html">Paleoscovery</a>
+                            <a href="beedone.html">BeeDone</a>
+                            <a href="flows.html" class="active">Flows Music</a>
+                            <a href="tod.html">Truth Or Dare</a>
                         </div>
                     </li>
                 </ul>
@@ -46,12 +46,12 @@
         </div>
     </nav>
 
-    <section class="site-hero" style="background-image: url(images/paleoscovery_1.png);" id="section-home"
+    <section class="site-hero" style="background-image: url(images/flows_1.jpg);" id="section-home"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row intro-text align-items-center justify-content-center">
                 <div class="col-md-10 text-center pt-5">
-                    <h1 class="site-heading site-animate">This is<strong class="d-block"> Paleoscovery</strong>
+                    <h1 class="site-heading site-animate">This is<strong class="d-block"> Flows</strong>
                     </h1>
                 </div>
             </div>
