--- a/flows.html
+++ b/flows.html
@@ -31,9 +31,8 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-resume">Resume</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link active" onclick="showDropDown()"
-                            style="cursor:pointer">Projects
-                            ▼</a>
+                    <li class="nav-item">
+                        <div class="nav-link active" onclick="showDropDown()" style="cursor:pointer">Projects ▼</div>
                         <div class="dropdown-content" hidden>
                             <a href="paleoscovery.html">Paleoscovery</a>
                             <a href="beedone.html">BeeDone</a>
@@ -79,8 +78,8 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <a href="#">
-                                    <img class="image img-fluid" src="images/Flows_1.jpg" alt="">
+                                <a href="flows.html">
+                                    <img class="image img-fluid" src="images/flows_1.jpg" alt="">
                                 </a>
                             </div>
                             <!--<a href="images/Flows_1.jpg" class="img-pop-up">
@@ -100,14 +99,14 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <a href="#">
-                                    <img class="image img-fluid" src="images/Paleoscovery_1.png" alt="">
+                                <a href="paleoscovery.html">
+                                    <img class="image img-fluid" src="images/paleoscovery_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/Paleoscovery_1.png" class="img-pop-up">
+                            <a href="images/paleoscovery_1.png" class="img-pop-up">
                                 <div class="middle">
                                     <div class="text align-self-center d-flex"><img
-                                            src="images/Paleoscovery_preview.png" alt="">
+                                            src="images/paleoscovery_preview.png" alt="">
                                     </div>
                                 </div>
                             </a>
@@ -121,13 +120,13 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <a href="#">
-                                    <img class="image img-fluid" src="images/BeeDone_1.png" alt="">
+                                <a href="beedone.html">
+                                    <img class="image img-fluid" src="images/beedone_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/BeeDone_1.png" class="img-pop-up">
+                            <a href="images/beedone_1.png" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="images/BeeDone_preview.png"
+                                    <div class="text align-self-center d-flex"><img src="images/beedone_preview.png"
                                             alt="">
                                     </div>
                                 </div>
@@ -141,13 +140,14 @@
                     <div class="single-portfolio col-sm-4 all mobile game">
                         <div class="relative">
                             <div class="thumb">
-                                <div class="overlay overlay-bg"></div><a href="#">
-                                    <img class="image img-fluid" src="images/TOD_1.png" alt="">
+                                <div class="overlay overlay-bg"></div>
+                                <a href="tod.html">
+                                    <img class="image img-fluid" src="images/tod_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/TOD_1.png" class="img-pop-up">
+                            <a href="images/tod_1.png" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="images/TOD_preview.png" alt="">
+                                    <div class="text align-self-center d-flex"><img src="images/tod_preview.png" alt="">
                                     </div>
                                 </div>
                             </a>
