--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
 
 	<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
 		<div class="container">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
-				aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
 			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
@@ -31,10 +27,11 @@
 					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
-					<li class="nav-item"><a class="nav-link active" onclick="showDropDown()"
-							style="cursor:pointer">Projects▼</a>
+					<li class="nav-item">
+						<a class="nav-link active" onclick="showDropDown()" style="cursor:pointer" disabled>Projects▼
+						</a>
 						<div class="dropdown-content" hidden>
-							<a href="./paleoscovery.html" class="active">Paleoscovery</a>
+							<a href="./paleoscovery.html">Paleoscovery</a>
 							<a href="./beedone.html">BeeDone</a>
 							<a href="./flows.html">Flows Music</a>
 							<a href="./tod.html">Truth Or Dare</a>
@@ -79,7 +76,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="#">
+								<a href="flows.html">
 									<img class="image img-fluid" src="images/flows_1.jpg" alt="">
 								</a>
 							</div>
@@ -121,7 +118,7 @@
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
-								<a href="#">
+								<a href="beedone.html">
 									<img class="image img-fluid" src="images/beedone_1.png" alt="">
 								</a>
 							</div>
@@ -141,7 +138,7 @@
 					<div class="single-portfolio col-sm-4 all mobile game">
 						<div class="relative">
 							<div class="thumb">
-								<div class="overlay overlay-bg"></div><a href="#">
+								<div class="overlay overlay-bg"></div><a href="tod.html">
 									<img class="image img-fluid" src="images/tod_1.png" alt="">
 								</a>
 							</div>
