--- a/paleoscovery.html
+++ b/paleoscovery.html
@@ -20,10 +20,6 @@
 
     <nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
-                aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -32,8 +28,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link active" onclick="showDropDown()"
-                            style="cursor:pointer">Projects
-                            ▼</a>
+                            style="cursor:pointer">Projects ▼</a>
                         <div class="dropdown-content" hidden>
                             <a href="./paleoscovery.html" class="active">Paleoscovery</a>
                             <a href="./beedone.html">BeeDone</a>
@@ -79,8 +74,8 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <a href="#">
-                                    <img class="image img-fluid" src="images/Flows_1.jpg" alt="">
+                                <a href="flows.html">
+                                    <img class="image img-fluid" src="images/flows_1.jpg" alt="">
                                 </a>
                             </div>
                             <!--<a href="images/Flows_1.jpg" class="img-pop-up">
@@ -100,14 +95,14 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <a href="#">
-                                    <img class="image img-fluid" src="images/Paleoscovery_1.png" alt="">
+                                <a href="paleoscovery.html">
+                                    <img class="image img-fluid" src="images/paleoscovery_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/Paleoscovery_1.png" class="img-pop-up">
+                            <a href="images/paleoscovery_1.png" class="img-pop-up">
                                 <div class="middle">
                                     <div class="text align-self-center d-flex"><img
-                                            src="images/Paleoscovery_preview.png" alt="">
+                                            src="images/paleoscovery_preview.png" alt="">
                                     </div>
                                 </div>
                             </a>
@@ -121,13 +116,13 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
-                                <a href="#">
-                                    <img class="image img-fluid" src="images/BeeDone_1.png" alt="">
+                                <a href="beedone.html">
+                                    <img class="image img-fluid" src="images/beedone_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/BeeDone_1.png" class="img-pop-up">
+                            <a href="images/beedone_1.png" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="images/BeeDone_preview.png"
+                                    <div class="text align-self-center d-flex"><img src="images/beedone_preview.png"
                                             alt="">
                                     </div>
                                 </div>
@@ -141,13 +136,13 @@
                     <div class="single-portfolio col-sm-4 all mobile game">
                         <div class="relative">
                             <div class="thumb">
-                                <div class="overlay overlay-bg"></div><a href="#">
-                                    <img class="image img-fluid" src="images/TOD_1.png" alt="">
+                                <div class="overlay overlay-bg"></div><a href="tod.html">
+                                    <img class="image img-fluid" src="images/tod_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/TOD_1.png" class="img-pop-up">
+                            <a href="images/tod_1.png" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="images/TOD_preview.png" alt="">
+                                    <div class="text align-self-center d-flex"><img src="images/tod_preview.png" alt="">
                                     </div>
                                 </div>
                             </a>
