migliorie all'UI e risoluzione bug :lipstick: :bug:

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="https://cdn-icons-png.flaticon.com/128/5861/5861285.png">
+	<link rel="icon" href="images/favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
 
 </head>
