--- a/flows.html
+++ b/flows.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/5861/5861285.png">
+    <link rel="icon" href="images/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
 
 </head>
@@ -32,7 +32,8 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
                     <li class="nav-item">
-                        <div class="nav-link active" onclick="showDropDown()" style="cursor:pointer">Projects ▼</div>
+                        <div class="nav-link active" onclick="showDropDown()" style="cursor:pointer" id="dropdown-btn">
+                            Projects ▼</div>
                         <div class="dropdown-content" hidden>
                             <a href="paleoscovery.html">Paleoscovery</a>
                             <a href="beedone.html">BeeDone</a>
