--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
 		<div class="container">
-			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
+			<div class="collapse navbar-collapse justify-content-md-center">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
@@ -28,7 +28,8 @@
 					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
 					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
 					<li class="nav-item">
-						<a class="nav-link active" onclick="showDropDown()" style="cursor:pointer" disabled>Projects▼
+						<a class="nav-link" onclick="showDropDown()" style="cursor:pointer" disabled
+							id="dropdown-btn">Projects ▼
 						</a>
 						<div class="dropdown-content" hidden>
 							<a href="./paleoscovery.html">Paleoscovery</a>
