rimosso bug che non mostrava la navbar su mobile :bug:

--- a/flows.html
+++ b/flows.html
@@ -31,9 +31,9 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-resume">Resume</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
-                    <li class="nav-item">
-                        <div class="nav-link active" onclick="showDropDown()" style="cursor:pointer" id="dropdown-btn">
-                            Projects ▼</div>
+                    <li class="nav-item"><a class="nav-link active" onclick="showDropDown()" style="cursor:pointer"
+                            disabled id="dropdown-btn">
+                            Projects ▼</a>
                         <div class="dropdown-content" hidden>
                             <a href="paleoscovery.html">Paleoscovery</a>
                             <a href="beedone.html">BeeDone</a>
