--- a/tod.html
+++ b/tod.html
@@ -32,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link active" onclick="showDropDown()" style="cursor:pointer"
-                            id="dropdown-btn">Projects ▼</a>
+                            disabled id="dropdown-btn">Projects ▼</a>
                         <div class="dropdown-content" hidden>
                             <a href="paleoscovery.html">Paleoscovery</a>
                             <a href="beedone.html">BeeDone</a>
