--- a/paleoscovery.html
+++ b/paleoscovery.html
@@ -20,6 +20,10 @@
 
     <nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
         <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
+                aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -28,7 +32,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link active" onclick="showDropDown()" style="cursor:pointer"
-                            id="dropdown-btn">Projects ▼</a>
+                            disabled id="dropdown-btn">Projects ▼</a>
                         <div class="dropdown-content" hidden>
                             <a href="./paleoscovery.html" class="active">Paleoscovery</a>
                             <a href="./beedone.html">BeeDone</a>
