migliorata responsiveness e rimossi bug :lipstick: :bug:

--- a/tod.html
+++ b/tod.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link active" onclick="showDropDown()" style="cursor:pointer"
                             disabled id="dropdown-btn">Projects ▼</a>
-                        <div class="dropdown-content" hidden>
+                        <div id="dropdown-content" class="dropdown-content" hidden>
                             <a href="paleoscovery.html">Paleoscovery</a>
                             <a href="beedone.html">BeeDone</a>
                             <a href="flows.html">Flows Music</a>
