--- a/flows.html
+++ b/flows.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link active" onclick="showDropDown()" style="cursor:pointer"
                             disabled id="dropdown-btn">
                             Projects ▼</a>
-                        <div class="dropdown-content" hidden>
+                        <div id="dropdown-content" class="dropdown-content" hidden>
                             <a href="paleoscovery.html">Paleoscovery</a>
                             <a href="beedone.html">BeeDone</a>
                             <a href="flows.html" class="active">Flows Music</a>
