--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<a class="nav-link" onclick="showDropDown()" style="cursor:pointer" disabled
 							id="dropdown-btn">Projects ▼
 						</a>
-						<div class="dropdown-content" hidden>
+						<div id="dropdown-content" class="dropdown-content" hidden>
 							<a href="./paleoscovery.html">Paleoscovery</a>
 							<a href="./beedone.html">BeeDone</a>
 							<a href="./flows.html">Flows Music</a>
