aggiunto iframe :fire:

--- a/paleoscovery.html
+++ b/paleoscovery.html
@@ -57,7 +57,9 @@
         </div>
     </section> <!-- section -->
     <section class="site-section" id="section-portfolio">
-        <iframe src="https://zzaimoo.github.io/paleoscovery_game.html" width="1920" height="1080"></iframe>
+        <button onclick="toggleGame()">Play Paleoscovery</button>
+        <iframe id="game" src="https://zzaimoo.github.io/paleoscovery_game.html" width="1920" height="1080"
+            hidden></iframe>
     </section>
     <section class="site-section" id="section-portfolio">
         <div class="container">
