--- a/paleoscovery.html
+++ b/paleoscovery.html
@@ -57,9 +57,10 @@
         </div>
     </section> <!-- section -->
     <section class="site-section" id="section-portfolio">
-        <button onclick="toggleGame()">Play Paleoscovery</button>
         <iframe id="game" src="https://zzaimoo.github.io/paleoscovery_game.html" width="1920" height="1080"
             hidden></iframe>
+        <button onclick="toggleGame()">Play Paleoscovery</button>
+        <button onclick="toggleSound()">Mute Unmute</button>
     </section>
     <section class="site-section" id="section-portfolio">
         <div class="container">
