--- a/paleoscovery.html
+++ b/paleoscovery.html
@@ -60,7 +60,7 @@
         <iframe id="game" src="https://zzaimoo.github.io/paleoscovery_game.html" width="1920" height="1080"
             hidden></iframe>
         <button onclick="toggleGame()">Play Paleoscovery</button>
-        <button onclick="toggleSound()" class="mute">Unmute</button>
+        <button id="muteBtn" onclick="toggleSound()" class="mute">Unmute</button>
     </section>
     <section class="site-section" id="section-portfolio">
         <div class="container">
