--- a/paleoscovery.html
+++ b/paleoscovery.html
@@ -227,6 +227,7 @@
     <script src="js/vendor/jquery.waypoints.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="//f.vimeocdn.com/js/froogaloop2.min.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/main.js"></script>
 
