--- a/pages/paleoscovery.html
+++ b/pages/paleoscovery.html
@@ -3,48 +3,44 @@
 
 <head>
 
-    <title>Resume</title>
+    <title>Paleoscovery</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/flexslider.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="../css/index.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
 
-    <nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
-        <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09"
-                aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#section-portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#section-resume">Resume</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#section-about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index.html#section-contact">Contact</a></li>
-                    <li class="nav-item"><a class="nav-link active" onclick="showDropDown()" style="cursor:pointer"
-                            disabled id="dropdown-btn">Projects ▼</a>
-                        <div id="dropdown-content" class="dropdown-content" hidden>
-                            <a href="./paleoscovery.html" class="active">Paleoscovery</a>
-                            <a href="./beedone.html">BeeDone</a>
-                            <a href="./flows.html">Flows Music</a>
-                            <a href="./tod.html">Truth Or Dare</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+    <header class="primary-header flex" style="position: sticky; top: 0; z-index:100">
+        <div>
+            <img src="../images/logo.png" style="height: 48px;width: 48px;" alt="My logo" class="logo">
         </div>
-    </nav>
+        <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"
+                aria-expanded="false">Menu</span></button>
+        <nav>
+            <ul id="primary-navigation" data-visible="false" class="primary-navigation underline-indicators flex"
+                style="box-shadow: 0 7px 6px -6px rgb(77, 77, 77);">
+                <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="../index.html"><span
+                        aria-hidden="true">00</span>Home</a>
+                <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#section-portfolio"><span
+                        aria-hidden="true">01</span>Portfolio</a>
+                <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#section-resume"><span
+                        aria-hidden="true">02</span>Resume</a>
+                <a class="ff-sans-cond uppercase text-white letter-spacing-2" href="#section-contact"><span
+                        aria-hidden="true">03</span>Contacts</a>
+            </ul>
+        </nav>
+    </header>
 
-    <section class="site-hero" style="background-image: url(images/paleoscovery_1.png);" id="section-home"
+    <section class="site-hero" style="background-image: url(../images/paleoscovery_1.png);" id="section-home"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row intro-text align-items-center justify-content-center">
@@ -55,12 +51,12 @@
             </div>
         </div>
     </section> <!-- section -->
-    <section class="site-section" id="section-portfolio">
+    <!--<section class="site-section" id="section-portfolio">
         <iframe id="game" src="https://zzaimoo.github.io/paleoscovery_game.html" width="1920" height="1080"
             hidden></iframe>
         <button onclick="toggleGame()">Play Paleoscovery</button>
         <button id="muteBtn" onclick="toggleSound()" class="mute">Unmute</button>
-    </section>
+    </section>-->
     <section class="site-section" id="section-portfolio">
         <div class="container">
             <div class="row">
@@ -83,7 +79,7 @@
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
                                 <a href="flows.html">
-                                    <img class="image img-fluid" src="images/flows_1.jpg" alt="">
+                                    <img class="image img-fluid" src="../images/flows_1.jpg" alt="">
                                 </a>
                             </div>
                             <!--<a href="images/Flows_1.jpg" class="img-pop-up">
@@ -104,13 +100,13 @@
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
                                 <a href="paleoscovery.html">
-                                    <img class="image img-fluid" src="images/paleoscovery_1.png" alt="">
+                                    <img class="image img-fluid" src="../images/paleoscovery_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/paleoscovery_1.png" class="img-pop-up">
+                            <a href="../images/paleoscovery_1.png" class="img-pop-up">
                                 <div class="middle">
                                     <div class="text align-self-center d-flex"><img
-                                            src="images/paleoscovery_preview.png" alt="">
+                                            src="../images/paleoscovery_preview.png" alt="">
                                     </div>
                                 </div>
                             </a>
@@ -125,12 +121,12 @@
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div>
                                 <a href="beedone.html">
-                                    <img class="image img-fluid" src="images/beedone_1.png" alt="">
+                                    <img class="image img-fluid" src="../images/beedone_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/beedone_1.png" class="img-pop-up">
+                            <a href="../images/beedone_1.png" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="images/beedone_preview.png"
+                                    <div class="text align-self-center d-flex"><img src="../images/beedone_preview.png"
                                             alt="">
                                     </div>
                                 </div>
@@ -145,12 +141,13 @@
                         <div class="relative">
                             <div class="thumb">
                                 <div class="overlay overlay-bg"></div><a href="tod.html">
-                                    <img class="image img-fluid" src="images/tod_1.png" alt="">
+                                    <img class="image img-fluid" src="../images/tod_1.png" alt="">
                                 </a>
                             </div>
-                            <a href="images/tod_1.png" class="img-pop-up">
+                            <a href="../images/tod_1.png" class="img-pop-up">
                                 <div class="middle">
-                                    <div class="text align-self-center d-flex"><img src="images/tod_preview.png" alt="">
+                                    <div class="text align-self-center d-flex"><img src="../images/tod_preview.png"
+                                            alt="">
                                     </div>
                                 </div>
                             </a>
@@ -217,18 +214,18 @@
         </div>
     </footer>
 
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/vendor/popper.min.js"></script>
-    <script src="js/vendor/bootstrap.min.js"></script>
-    <script src="js/vendor/jquery.easing.1.3.js"></script>
-    <script src="js/vendor/jquery.stellar.min.js"></script>
-    <script src="js/vendor/jquery.waypoints.min.js"></script>
+    <script src="../js/vendor/jquery.min.js"></script>
+    <script src="../js/vendor/jquery-migrate-3.0.1.min.js"></script>
+    <script src="../js/vendor/popper.min.js"></script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
+    <script src="../js/vendor/jquery.easing.1.3.js"></script>
+    <script src="../js/vendor/jquery.stellar.min.js"></script>
+    <script src="../js/vendor/jquery.waypoints.min.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script src="//f.vimeocdn.com/js/froogaloop2.min.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/custom.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/navigation.js" defer></script>
 
 </body>
 
