modificate un sacco di cose :fire:

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<a class="skip-to-content" href="#main">Skip to content</a>
 	<header class="primary-header flex" style="position: sticky; top: 0; z-index:100">
 		<div>
-			<img src="./images/logo.png" style="height: 48px;width: 48px;" alt="space tourism logo" class="logo">
+			<img src="./images/logo.png" style="height: 48px;width: 48px;" alt="My logo" class="logo">
 		</div>
 		<button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"
 				aria-expanded="false">Menu</span></button>
