--- a/pages/main.html
+++ b/pages/main.html
@@ -22,7 +22,7 @@
 
     <header class="primary-header flex" style="position: sticky; top: 0; z-index:100">
         <div>
-            <img src="../images/logo.png" style="height: 48px;width: 48px;" alt="My logo" class="logo">
+            <img src="../images/Logo.png" style="height: 48px;width: 48px;" alt="My logo" class="logo">
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"
                 aria-expanded="false">Menu</span></button>
