modificate un sacco di cose :fire:

--- a/pages/main.html
+++ b/pages/main.html
@@ -206,14 +206,15 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Job Experiences</h2>
                     <!--<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
-						<h3>Lead Product Designer</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic.</p>
-						<span class="school">Github</span>
-					</div>
+                        <span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
+                        <h3>Lead Product Designer</h3>
+                        <p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+                            unorthographic.</p>
+                        <span class="school">Github</span>
+                    </div>-->
+                    <!--
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> March 2013 - Present</span>
 						<h3>Lead Product Designer</h3>
