risolto bug delle icone :bug:

--- a/pages/main.html
+++ b/pages/main.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="../css/flexslider.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../fonts/icomoon/style.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/index.css">
@@ -331,8 +332,9 @@
                             <span class="icon-browser2"></span>
                         </span>
                         <h3 class="mb-4">Mobile Development</h3>
-                        <p>If you want a native application i'm the right person for you, i have made 3, one using unity
-                            and 2 using Flutter.</p>
+                        <p>If you want a native application i'm the right person for you, i have made 3 since i started
+                            programming, one using unity
+                            and 2 using Flutter, one of which was also my finals project.</p>
                         <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
                     </div>
                 </div>
@@ -343,81 +345,13 @@
                         </span>
                         <h3 class="mb-4">Game Development</h3>
                         <p>I currently made 2 games, one for pc and one for mobile, they are both pretty scarce but as
-                            someone who never studied that in school i consider this a great achievement</p>
+                            someone whose never studied that in school i consider this a great achievement</p>
                         <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
                     </div>
                 </div>
-                <!--<div class="col-md-6 col-lg-4 text-center mb-5">
-					<div class="site-service-item site-animate" data-animate-effect="fadeIn">
-						<span class="icon">
-							<span class="icon-video2"></span>
-						</span>
-						<h3 class="mb-4">Video Editing</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-							unorthographic life One day however a small line of blind text by the name of Lorem Ipsum
-							decided to leave for the far World of Grammar.</p>
-						<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
-					</div>
-				</div>-->
             </div>
         </div>
     </section>
-
-    <!-- <section class="site-section" id="section-blog">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 mb-5">
-					<div class="section-heading text-center">
-						<h2>Blog on <strong>Medium</strong></h2>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="../images/post_1.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an
-								almost unorthographic.</p>
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="../images/post_2.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an
-								almost unorthographic.</p>
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 col-lg-4 mb-4">
-					<div class="blog-entry">
-						<a href="#"><img src="../images/post_3.jpg" alt="Image placeholder" class="img-fluid"></a>
-						<div class="blog-entry-text">
-							<h3><a href="#">Creative Product Designer From Facebook</a></h3>
-							<p class="mb-4">Even the all-powerful Pointing has no control about the blind texts it is an
-								almost unorthographic.</p>
-							<div class="meta">
-								<a href="#"><span class="icon-calendar"></span> Aug 7, 2018</a>
-								<a href="#"><span class="icon-bubble"></span> 5 Comments</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>-->
 
     <section class="site-section" id="section-contact">
         <div class="container">
